Fix spacing in large screens and leaking out probelm in Subscribe section.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -66,8 +66,7 @@ body {
   }
 }
 
-@media (max-width: 730px) {
-  .subscribe-background {
-    height: 200px;
-  }
+
+.subscribe-background {
+    height: 350px;
 }
